HTTP2 ping tests.